fixed alignment of logo and navigation items on the navigation bar

--- a/index.css
+++ b/index.css
@@ -10,10 +10,11 @@
     overflow: hidden;
     background-color: black;
     position: fixed;
-    text-align: center;
     top: 0;
     width: 100%;
+    min-height: 25px;
     z-index: 6; /* making sure the nav bar is top level */
+    vertical-align: center;
 }
 
 
@@ -26,24 +27,17 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    text-align: center;
+    min-height: 10px;
     z-index: 6; /* making sure the nav bar is top level */
+    vertical-align: center;
 }
 
-hr {
-  color: #123455;
-}
-
-#map {
-        width: 100%;
-        height: 400px;
-      }
 
 li {
-    float: left;
-    display: inline;
+    vertical-align: middle;
+    display: inline-block;
     font-size: 20px;
-    padding: 16px;
+    padding: 15px;
 }
 
 
@@ -57,6 +51,16 @@ li a {
 li a:hover {
     background-color: #A7FFEB;
 }
+
+
+hr {
+  color: #123455;
+}
+
+#map {
+        width: 100%;
+        height: 400px;
+      }
 
 .active {
     background-color: #A7FFEB;
